--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "bugs": {
     "url": "https://github.com/nishisuke/save-brain-app/issues"
   },
-  "homepage": "https://github.com/nishisuke/save-brain-app#readme"
+  "homepage": "https://github.com/nishisuke/save-brain-app#readme",
+  "devDependencies": {
+    "webpack": "^4.29.0"
+  }
 }
