--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "webpack": "^4.29.0"
+  },
+  "dependencies": {
+    "firebase": "^5.8.1"
   }
 }
