--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "firebase": "^5.8.1"
