--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "firebase": "^5.8.1"
+    "firebase": "^5.8.1",
+    "firebaseui": "^3.5.2"
   }
 }
