--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
@@ -29,6 +30,8 @@
   },
   "dependencies": {
     "firebase": "^5.8.1",
-    "firebaseui": "^3.5.2"
+    "firebaseui": "^3.5.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   }
 }
