--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
+    "extract-loader": "^3.1.0",
     "firebase-tools": "^6.3.1",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.23.1",
