--- a/package.json
+++ b/package.json
@@ -25,14 +25,13 @@
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^1.0.1",
     "css-loader": "^2.1.0",
-    "extract-loader": "^3.1.0",
     "firebase-tools": "^6.3.1",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.14",
-    "webpack-merge": "^4.2.1"
+    "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
     "bulma": "^0.7.4",
