--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bulma": "^0.7.4",
     "firebase": "^5.8.1",
     "firebaseui": "^3.5.2",
+    "moment": "^2.24.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
   }
