--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,5 @@
   "name": "Save brain app",
   "display": "standalone",
   "start_url": "/"
-  "background_color": "#fff"
+  "background_color": "#ffffff"
 }
