--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prd": "webpack --config webpack.prd.js",
+    "compile": "webpack --config webpack.prd.js",
     "start": "webpack-dev-server --open --config webpack.dev.js"
   },
   "repository": {
