--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nishisuke/save-brain-app.git"
+    "url": "git+https://github.com/nishisuke/memote.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/nishisuke/save-brain-app/issues"
+    "url": "https://github.com/nishisuke/memote/issues"
   },
-  "homepage": "https://github.com/nishisuke/save-brain-app#readme",
+  "homepage": "https://github.com/nishisuke/memote#readme",
   "devDependencies": {
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
