--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-ga": "^2.5.7",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-swipeable-views": "^0.13.3"
   }
 }
