--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "immutable": "^4.0.0-rc.12",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-ga": "^2.5.7",
     "react-router-dom": "^4.3.1"
   }
 }
